# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests-and-lint.yml  tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_crud.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_crud.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_description.py
task_manager/tasks/tests/: test_crud.py
task_manager/templates/: base.html  index.html  login.html  messages.html  navbar.html
task_manager/templates/labels/: label_delete.html  label_list.html
task_manager/templates/statuses/: status_delete.html  status_form.html  status_list.html
task_manager/templates/tasks/: task_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/users/: user_delete.html  user_form.html  user_list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_auth.py  test_crud.py
