[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["nerodnoy <thatsforsure@mail.ru>"]
readme = "README.md"
packages = [
    { include = "task_manager" } ]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"
django-bootstrap5 = "^24.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
