[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["nerodnoy <thatsforsure@mail.ru>"]
readme = "README.md"
packages = [
    { include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"
django-bootstrap5 = "^24.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
django-filter = "^24.2"
rollbar = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
coverage = "^7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
